# murnet

./: .gitignore  .murnet_peers.json  .murnet_vds.json  BUILD_SIGNATURE  HOME_RELAY.md  LICENSE  MURNET.md  MURNET_V5.md  README.md  README_RU.md  __init__.py  build_exe.py  cli.py  desktop_app.py  home_node.err  home_node.ps1  home_relay.err  home_relay.py  murnet_browser.py  murnet_proxy.py  murnet_vpn.py  network_viz.py  pyproject.toml  pytest.ini  requirements.txt  setup_cython.py
.github/workflows/: build.yml
api/: auth.py  models.py  onion_api.py  server.py
browser_rs/: Cargo.toml  README.md
browser_rs/src/: main.rs
configs/: vpn_client.json  vpn_one_node.json  vpn_server.json
core/: config.py  integrity.py
core/data/: __init__.py  migrations.py  objects.py  storage.py
core/identity/: __init__.py  crypto.py  identity.py  keystore.py
core/net/: __init__.py  async_transport.py  dht_rpc.py  murnaked.py  network_auth.py  protocol.py  routing.py  transport.py
core/node/: __init__.py  async_node.py  node.py  pubsub.py
core/onion/: SECURITY.md  __init__.py  cell.py  hidden_service.py  hop_key.py  hs_client.py  hs_router.py  obfs.py  obfs_transport.py  router.py  transport.py
core/vpn/: __init__.py  config.py  socks5.py  tunnel.py
demos/: hidden_service_demo.py  network_secret.py  obfs_demo.py  onion_chat.py  onion_node.py  vpn_client.py  vpn_onion.py
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  MOBILE.md  ONION.md  PROTOCOL.md  USER_GUIDE.md  VDS.md  WIKI.md
docs/en/: ARCHITECTURE.md  ONION.md  PROTOCOL.md
mobile/: battery.py  network.py  push.py  sync.py
murnet/: __init__.py  browser.py  cli.py  desktop_app.py  murnet_vpn.py
murnet/api/: onion_api.py  server.py
murnet/core/: config.py  integrity.py
murnet/demos/: hidden_service_demo.py  network_secret.py  obfs_demo.py  onion_chat.py  onion_node.py  vpn_client.py  vpn_onion.py
murnet/mobile/: sync.py
murnet/vds/: docker.py  murnet-hs.service  murnet-middle.service  systemd.py  vds_middle_relay.py
scripts/: backup.sh  deploy.sh  generate_config.py  migrate_to_namespace.py  node_status.py  vds.sh  vds_hidden_service.py  wg_modes.py
tests/: conftest.py  test_replay_smoke.py
tests/integration/: test_integration.py  test_node_discovery.py  test_onion_e2e.py  test_transport_nat.py
tests/performance/: test_performance.py
tests/security/: test_security.py  test_security_layers.py
tests/simulation/: test_network_sim.py
tests/unit/: test_crypto.py  test_dht.py  test_directory.py  test_integrity.py  test_keystore.py  test_network.py  test_network_auth.py  test_objects.py  test_onion.py  test_pubsub.py  test_routing.py  test_storage.py  test_stun.py  test_transport.py  test_upnp.py  test_vpn_config.py  test_vpn_socks5.py  test_vpn_tunnel.py
tools/: sign_build.py
vds/: monitoring.py  systemd.py  vds_middle_relay.py
website/: app.py  murnet-website.service
website/promo/: mux.py  promo.html  (+3 more)
(+35 files in other folders)
