[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "murnet"
version = "6.2.2"
description = "Decentralized P2P network with onion routing, DHT and VPN tunnel"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "cotafei" },
]
keywords = ["p2p", "onion-routing", "dht", "vpn", "anonymity", "cryptography"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications",
    "Topic :: Internet",
    "Topic :: Security :: Cryptography",
]

dependencies = [
    "cryptography>=42.0.0",
    "aiohttp>=3.9.0",
    "async-timeout>=4.0.3",
    "websockets>=12.0",
    "requests>=2.31.0",
    "pydantic>=2.6.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.9",
    "uvloop>=0.19.0; platform_system != 'Windows'",
    "colorama>=0.4.6",
    "rich>=13.7.0",
    "prompt_toolkit>=3.0.0",
    "PyJWT>=2.8.0",
    "psutil>=5.9.8",
    "pyyaml>=6.0.1",
    "puremagic>=1.20,<2.0",
]

[project.optional-dependencies]
tui     = ["textual>=0.70.0"]
browser = ["PyQt6>=6.6.0", "PyQt6-WebEngine>=6.6.0"]
build   = ["pyinstaller>=6.0.0"]
dev     = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-cov>=4.1"]

[project.urls]
Homepage   = "https://github.com/cotafei/MurNet"
Repository = "https://github.com/cotafei/MurNet"
Issues     = "https://github.com/cotafei/MurNet/issues"

[project.scripts]
murnet         = "murnet.cli:main"
murnet-node    = "murnet.demos.onion_node:main"
murnet-vpn     = "murnet.demos.vpn_client:main"
murnet-desktop = "murnet.desktop_app:main"
murnet-browser = "murnet.browser:main"

[tool.setuptools.packages.find]
where   = ["."]
include = ["murnet*"]
exclude = ["tests*", "demos*", "scripts*", "website*", "browser_rs*", ".claude*"]

[tool.setuptools.package-data]
murnet = ["py.typed", "**/*.yaml", "**/*.json"]

[tool.setuptools.data-files]
"share/murnet/icons" = ["assets/icons/logo.svg"]

[tool.pytest.ini_options]
testpaths      = ["tests"]
asyncio_mode   = "auto"
python_files   = ["test_*.py"]
markers = [
    "slow: marks tests as slow",
    "performance: performance tests",
    "simulation: network simulation tests",
]
